2005-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: reverted to version 1.60.

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/association.py: use one rotation function (update_dir
	method and xs rotation refactorized), show direction arrow on proper
	side of association name

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
	navigability support

2005-01-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/pluginmanager.py: use modutils in favor of imp.
	Now actions can be nested in packages!
	Load plugins under namespace gaphor.plugins.

2005-01-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/*/plugin.xml: changed toplevel plugin tag to
	'gaphor-plugin'
	* gaphor/pluginmanager.py: changed xml parser to load new tag.

2005-01-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: fixed bug in Lifeline diagram.

2005-01-11  wrobell <wrobell@pld-linux.org>

	* gaphor/UML/uml2.gaphor: added InternalStructures diagrams

2005-01-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: Use gtk.AccelMap to store accelerator
	keys. Now accelerators can be configured at runtime.
	* gaphor/__init__.py, gaphor/ui/__init__.py: load/save accelmap at
	start/end of application.

2005-01-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: fixed small bug, now recent-files also
	works with an empty recent-files list.

2005-01-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: fixed ObjectAction for use with slots.
	Added ActionPool.set_action().
	* gaphor/ui/mainactions.py: added Recent files slot
	* gaphor/ui/mainwindow.py: (set_filename) add file to recent files.

2005-01-04  wrobell <wrobell@pld-linux.org>

	* gaphor/ui/mainactions.py: set default name for created diagram and
	allow user to edit it immediately
